--- a/src/app/shared/components/go-back-button/go-back-button.component.html
+++ b/src/app/shared/components/go-back-button/go-back-button.component.html
@@ -1,1 +1,3 @@
-<a class="btn btn-outline-dark" (click)="goBack()"><i class="bi bi-arrow-left"></i> Назад</a>
+<button type="button" class="btn btn-outline-dark small" (click)="goBack()">
+  <span class="small"><i class="bi bi-arrow-left me-1"></i>Назад</span>
+</button>
