--- a/src/app/modules/admin/components/salaries/salaries-admin-page/salaries-admin-page.component.html
+++ b/src/app/modules/admin/components/salaries/salaries-admin-page/salaries-admin-page.component.html
@@ -1,9 +1,8 @@
-<app-page-header>All salaries</app-page-header>
+<app-page-header>Анкеты в статистике</app-page-header>
 
 <div class="container my-5" *ngIf="salaries; else dataLoading">
   <div class="card">
     <div class="card-body">
-
       <app-salaries-admin-paginated-table
         [source]="source"
         [salaries]="salaries"
@@ -13,8 +12,7 @@
         (loadDataRequested)="loadData($event)"
         (deleteRequested)="deleteSalary($event)"
         (excludeRequested)="excludeSalary($event)"
-        ></app-salaries-admin-paginated-table>
-
+      ></app-salaries-admin-paginated-table>
     </div>
   </div>
 </div>
