--- a/src/app/modules/admin/components/telegram/telegram-bot-usages/telegram-bot-usages.component.html
+++ b/src/app/modules/admin/components/telegram/telegram-bot-usages/telegram-bot-usages.component.html
@@ -1,36 +1,43 @@
-<app-page-header>Telegram bot usages</app-page-header>
+<app-page-header>Использование бота</app-page-header>
 
 <div class="container my-5" *ngIf="items; else dataLoading">
   <div class="card">
     <div class="card-body">
-
-      <div class="table-responsive mb-3" *ngIf="items && items.length > 0; else nothingToShow">
+      <div
+        class="table-responsive mb-3"
+        *ngIf="items && items.length > 0; else nothingToShow"
+      >
         <table class="table table-hover table-sm">
           <thead class="small">
-            <th>Username</th>
-            <th>Count</th>
-            <th>Channel</th>
-            <th>Used in</th>
-            <th>Received text</th>
-            <th>Created at</th>
-            <th>Updated at</th>
+            <th>Никнейм</th>
+            <th>Кол-во</th>
+            <th>Канал/группа</th>
+            <th>Тип</th>
+            <th>Полученный текст</th>
+            <th>Создано</th>
+            <th>Обновлено</th>
           </thead>
           <tbody>
             <tr class="small" *ngFor="let item of items; let i = index">
               <td>{{ item.username }}</td>
-              <td>{{ item.usageCount | number: '1.0-0' }}</td>
-              <td>{{ item.channelName ?? '-' }}</td>
+              <td>{{ item.usageCount | number: "1.0-0" }}</td>
+              <td>{{ item.channelName ?? "-" }}</td>
               <td>{{ item.usageTypeAsString }}</td>
-              <td title="{{item.receivedMessageText}}">{{ item.receivedMessageText }}</td>
-              <td>{{ item.createdAt | date: 'yyyy-MM-dd HH:mm' }}</td>
-              <td>{{ item.updatedAt | date: 'yyyy-MM-dd HH:mm' }}</td>
+              <td title="{{ item.receivedMessageText }}">
+                {{ item.receivedMessageText }}
+              </td>
+              <td>{{ item.createdAt | date: "yyyy-MM-dd HH:mm" }}</td>
+              <td>{{ item.updatedAt | date: "yyyy-MM-dd HH:mm" }}</td>
             </tr>
           </tbody>
         </table>
       </div>
 
       <div class="" *ngIf="source && source.results.length > 0">
-        <app-pagination-buttons [source]="source" (pageChange)="loadData($event)"></app-pagination-buttons>
+        <app-pagination-buttons
+          [source]="source"
+          (pageChange)="loadData($event)"
+        ></app-pagination-buttons>
       </div>
     </div>
   </div>
@@ -39,7 +46,7 @@
 <ng-template #nothingToShow>
   <div class="card">
     <div class="card-body">
-      <div class="text-center">There is no items.</div>
+      <div class="text-center">Нет данных.</div>
     </div>
   </div>
 </ng-template>
