--- a/src/app/modules/interviews/components/my-interviews/my-interviews.component.html
+++ b/src/app/modules/interviews/components/my-interviews/my-interviews.component.html
@@ -3,7 +3,10 @@
 <div class="container my-5" *ngIf="interviews; else dataLoading">
   <div class="card">
     <div class="card-body">
-      <div class="table-responsive" *ngIf="interviews.length > 0; else nothingToShow">
+      <div
+        class="table-responsive"
+        *ngIf="interviews.length > 0; else nothingToShow"
+      >
         <table class="table table-hover">
           <thead>
             <th>#</th>
@@ -18,12 +21,23 @@
             <tr *ngFor="let item of interviews; let i = index">
               <td>{{ i + 1 }}</td>
               <td>{{ item.candidateName }}</td>
-              <td><app-developer-grade-label [grade]="item.candidateGrade"></app-developer-grade-label></td>
-              <td>{{ item.subjects?.length ?? 0 }}</td>
-              <td><app-label *ngFor="let label of item.labels" [label]="label"></app-label></td>
-              <td>{{ item.updatedAt | date: 'HH:mm yyyy-MM-dd' }}</td>
               <td>
-                <a routerLink="/interviews/{{ item.id }}" class="btn-link-sm"> <i class="fa fa-eye"></i> Открыть</a>
+                <app-developer-grade-label
+                  [grade]="item.candidateGrade"
+                ></app-developer-grade-label>
+              </td>
+              <td>{{ item.subjects?.length ?? 0 }}</td>
+              <td>
+                <app-label
+                  *ngFor="let label of item.labels"
+                  [label]="label"
+                ></app-label>
+              </td>
+              <td>{{ item.updatedAt | date: "HH:mm yyyy-MM-dd" }}</td>
+              <td class="small">
+                <a routerLink="/interviews/{{ item.id }}" class="btn-link-sm"
+                  >Открыть</a
+                >
               </td>
             </tr>
           </tbody>
@@ -45,7 +59,9 @@
       <div class="text-center">Еще нет заметок.</div>
 
       <div class="text-center mt-3">
-        <a routerLink="/interviews/create" class="btn btn-primary"> <i class="bi bi-plus-circle"></i> Начать интервью</a>
+        <a routerLink="/interviews/create" class="btn btn-primary">
+          <i class="bi bi-plus-circle"></i> Начать интервью</a
+        >
       </div>
     </div>
   </div>
