--- a/src/app/modules/interviews/components/interviews-home/interviews-home.component.html
+++ b/src/app/modules/interviews/components/interviews-home/interviews-home.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row pt-5">
-    <div class="col-sm d-flex align-items-end">
+    <div class="col-sm-6 d-flex align-items-center">
       <div class="d-inline-block my-5">
         <div class="display-1">Заметки к интервью</div>
         <div class="lead">Проводите технические интервью.</div>
         <div class="lead">Ведите заметки. Создавайте шаблоны.</div>
       </div>
     </div>
-    <div class="col-sm">
-      <img src="/assets/img/Job-Interview-vector.png" alt="Interviewer" class="img-fluid" />
+    <div class="col-sm-6">
+      <img src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/intervew_transparent_1000.png" alt="Interviewer" class="img-fluid" />
     </div>
   </div>
 </div>
