--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -1,13 +1,16 @@
 <div class="container">
   <div class="row pt-5">
-    <div class="col-sm d-flex align-items-end">
+    <div class="col-sm-6 d-flex align-items-center">
       <div class="d-inline-block my-5">
         <div class="display-1">Tech.Interview</div>
         <div class="lead">Зарплаты в IT и заметки к техническим интервью</div>
       </div>
     </div>
-    <div class="col-sm">
-      <img src="/assets/img/Job-Interview-vector.png" alt="Interviewer" class="img-fluid" />
+    <div class="col-sm-6">
+      <img
+        src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_transparent_1000.png"
+        alt="Interviewer"
+        class="img-fluid" />
     </div>
   </div>
 </div>
@@ -16,30 +19,56 @@
 
   <div class="feature bg-white">
     <div class="container">
-      <div class="feature-title">Зарплаты в IT в Казахстане</div>
-      <div class="mt-3 feature-subtitle">
-        Здесь мы собираем и анализируем данные по зарплатам в IT в РК.
-      </div>
-      <div class="mt-1 feature-subtitle">
-        В 2024 году мы решили, что в Казахстане не хватает актуальной и публичной статистики по зарплатам в IT сфере. Мы решили это исправить.
-      </div>
-      <div class="feature-subtitle">
-        Хочешь узнать, сколько попросить в следующий раз на собеседовании - посмотри в собранной статистике.
-      </div>
-      <div class="mt-5">
-        <a routerLink="/salaries" class="btn btn-huge btn-primary">Перейти к зарплатам</a>
+      <div class="row">
+
+        <div class="col-sm-6">
+          <div class="feature-title">Зарплаты в IT в Казахстане</div>
+          <div class="mt-3 feature-subtitle">
+            Здесь мы собираем и анализируем данные по зарплатам в IT в РК.
+          </div>
+          <div class="mt-1 feature-subtitle">
+            В 2024 году мы решили, что в Казахстане не хватает актуальной и публичной статистики по зарплатам в IT сфере. Мы решили это исправить.
+          </div>
+          <div class="feature-subtitle">
+            Хочешь узнать, сколько попросить в следующий раз на собеседовании - посмотри в собранной статистике.
+          </div>
+          <div class="mt-5">
+            <a routerLink="/salaries" class="btn btn-huge btn-primary">Перейти к зарплатам</a>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <img
+            class="img-fluid"
+            src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_charts_transparent_1000.png"
+            alt="Main"
+          />
+        </div>
+
       </div>
     </div>
   </div>
 
   <div class="feature">
     <div class="container">
-      <div class="feature-title">Заметки к техническим интервью</div>
-      <div class="mt-3 feature-subtitle">
-        Если ты проводишь технические собеседования и хочешь создать шаблон и сохранять фидбеки, чтобы потом делиться ими с коллегами - тебе сюда.
-      </div>
-      <div class="mt-5">
-        <a routerLink="/interviews" class="btn btn-huge btn-outline-primary">Перейти к заметкам</a>
+      
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="feature-title">Заметки к техническим интервью</div>
+          <div class="mt-3 feature-subtitle">
+            Если ты проводишь технические собеседования и хочешь создать шаблон и сохранять фидбеки, чтобы потом делиться ими с коллегами - тебе сюда.
+          </div>
+          <div class="mt-5">
+            <a routerLink="/interviews" class="btn btn-huge btn-outline-primary">Перейти к заметкам</a>
+          </div>
+        </div>
+
+        <div class="col-sm-6">
+          <img
+            class="img-fluid"
+            src="https://techinterview.fra1.cdn.digitaloceanspaces.com/images/main_interview_transparent_1000.png"
+            alt="Main"
+          />
+        </div>
       </div>
     </div>
   </div>
